refactor main skeleton to fix rendering bug

--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton childDisplayMode="overlay">
+<app-main-skeleton>
 
     <app-main-top-nav-bar navbar [config]="navConfig">
     </app-main-top-nav-bar>
