--- a/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
+++ b/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
@@ -2,12 +2,13 @@
     position:relative;
     z-index:1;
     height:100%;
+    width:100%
 }
 
-.overlay{
+::ng-deep.main-skeleton-overlay{
     position:absolute;
     top:0;
-    width:100%;
+    width:100%!important;
     height:100%;
 }
 
