--- a/projects/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
+++ b/projects/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
@@ -20,7 +20,7 @@
         <span class="mr-auto ellipsis">
             <ng-container *ngIf="config.title">
                 <span *ngIf="!config.backFn else noLinkTitle" ngClass.xs="ml-1" ngClass.gt-xs="ml-2"
-                    [routerLink]="['/hjem']">{{ config.title || "Hjem" }}</span>
+                    routerLink="/hjem">{{ config.title || "Hjem" }}</span>
                 <ng-template #noLinkTitle><span ngClass.xs="ml-1" ngClass.gt-xs="ml-2">{{ config.title }}</span>
                 </ng-template>
             </ng-container>
