--- a/projects/kbtv-client/src/styles/styles.scss
+++ b/projects/kbtv-client/src/styles/styles.scss
@@ -75,7 +75,10 @@ body {font-family: Roboto, "Helvetica Neue", sans-serif;overflow-x:hidden;}
 
 .max-width{max-width:600px!important;margin:auto}
 
-.extended-dialog{max-width:90vw!important}
+.extended-dialog{
+  max-width:90vw!important;
+  .mat-dialog-container { padding:0 !important }
+}
 
 .h-100{height:100%;}
 
