--- a/projects/kbtv-client/src/styles/styles.scss
+++ b/projects/kbtv-client/src/styles/styles.scss
@@ -107,6 +107,8 @@ a {
    box-sizing: border-box;
 }
 
+.display-block{ display: block }
+
 .image_viewer_dialog{max-width:none!important;}
 
 .image_viewer_dialog .mat-dialog-container{background-color:black!important;padding:0!important}
