--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/components/swipe-card/swipe-card.component.scss
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/components/swipe-card/swipe-card.component.scss
@@ -1,16 +1,15 @@
-@import '../../../../../../styles/variables';
-
-::ng-deep .swipe-card{
+.swipe-card{
     padding:0!important;  
-    margin: $gap-size * 1px;
-    .swipe-hidden-content{
-        position:relative;
-        width:86px!important
-    }    
-    .swipe-content{
+    overflow:hidden;
+    .hidden-content{
+        position:absolute;
+        top:0;
+        left:0;
+        height:100%
+    }
+    .main-content{
         position:relative;
         z-index:1!important;
         background:inherit;
-        padding: $gap-size * 3px;
     }
 }
