refactor notifications & add generic notification helpers

--- a/projects/kbtv-client/src/styles/styles.scss
+++ b/projects/kbtv-client/src/styles/styles.scss
@@ -113,6 +113,10 @@ a {
 
 .image_viewer_dialog .mat-dialog-container{background-color:black!important;padding:0!important}
 
+.notification-margin{
+  
+}
+
 .notification-error{
   margin-bottom:$bottom-nav-height + $gap-size * 2px!important;
   @extend .warn;
