add padding to lists with fab to prevent fab blocking item

--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-note-list/mission-note-list/mission-note-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-note-list/mission-note-list/mission-note-list.component.html
@@ -3,7 +3,7 @@
     <app-main-top-nav-bar navbar [config]="navConfig" >
     </app-main-top-nav-bar>
 
-    <div class="max-width">
+    <div class="max-width bottom-fab-padding">
         <app-note-card *ngFor="let note of notes$ | async; trackBy: trackByNote" [note]="note" 
             (editClicked)="openEditNoteForm($event)">
         </app-note-card>
