--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
@@ -38,7 +38,7 @@
       </ng-container>
     </app-list-item>
 
-    <app-list-item *ifRole="RolePresets.Internal" [routerLink]="['/oppdrag', mission?.id, 'detaljer','dokumenter']">
+    <app-list-item *ifRole="permissions.MissionDocumentList.access" [routerLink]="['/oppdrag', mission?.id, 'detaljer','dokumenter']">
       <mat-icon left-side>folder</mat-icon>
       Dokumenter
       <ng-container right-side>
@@ -47,7 +47,7 @@
       </ng-container>
     </app-list-item>
 
-    <app-list-item *ifRole="RolePresets.Internal" [routerLink]="['/oppdrag', mission?.id, 'detaljer','notater']">
+    <app-list-item *ifRole="permissions.MissionNoteList.access" [routerLink]="['/oppdrag', mission?.id, 'detaljer','notater']">
       <mat-icon left-side>rate_review</mat-icon>
       Notater
       <ng-container right-side>
