--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-note-list/mission-note-list/note-card/note-card.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-note-list/mission-note-list/note-card/note-card.component.html
@@ -15,7 +15,7 @@
         </span>
 
 
-        <button *ifRole="RolePresets.Authority" (click)="editNote()" mat-icon-button color="accent"
+        <button *ifRole="can.update" (click)="editNote()" mat-icon-button color="accent"
             aria-label="Rediger notat">
             <mat-icon>edit</mat-icon>
         </button>
